EI-165 - Data Insights Landing Page (#13258)
Co-authored-by: Dean Towheed <deantowheed@MacBookPro-YY2Q9GM9W0.local>
Co-authored-by: EBermudez88 <ebermudez@sonatype.com>
Co-authored-by: Russ Jackson <rjackson@sonatype.com>